--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,20 @@
-/* You can add global styles to this file, and also import other style files */
+/* ESTILO GLOBAL AONDE TODO O PROJETO DEVE OBEDECER */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+:root {
+    font-size: 62.5%;
+}
+
+html {
+    scroll-behavior: smooth;
+}
+
+a, ul, li {
+    text-decoration: none;
+    list-style: none;
+}
+
